# the_little_snake_game

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
include/snake/: BoardElements.h  GraphicsBoard.h  MainWindow.h  Types.h  sampling.h  utils.h
src/: BoardElements.cpp  GraphicsBoard.cpp  MainWindow.cpp  main.cpp  sampling.cpp  utils.cpp
src/include/: CMakeLists.txt  Dockerfile
test/: snake_unit_test.cpp
